bk_ida/gccida/g2/output_asm_operand_names
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_operand_names/src/final.c:3527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *mem_expr_from_op; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_operand_names/src/final.c:3542:16: error: use of undeclared identifier 'stru_6F109F'
v7 = ( char *)&stru_6F109F._IO_save_end + 7; 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_asm_operand_names/src/obj/final.o] Error 1
